// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for AmazonConversionsApi's trackConversion destination action: all fields 1`] = `
Object {
  "eventData": Array [
    Object {
      "clientDedupeId": "J0[p[5E(EUCnQ$e4IRX",
      "consent": Object {
        "amazonConsent": Object {},
        "geo": Object {},
        "gpp": "J0[p[5E(EUCnQ$e4IRX",
        "tcf": "J0[p[5E(EUCnQ$e4IRX",
      },
      "countryCode": "J0[p[5E(EUCnQ$e4IRX",
      "currencyCode": "NOK",
      "customAttributes": Array [
        Object {
          "dataType": "BOOLEAN",
          "name": "J0[p[5E(EUCnQ$e4IRX",
          "value": "J0[p[5E(EUCnQ$e4IRX",
        },
      ],
      "dataProcessingOptions": Array [
        "LIMITED_DATA_USE",
      ],
      "eventActionSource": "WEBSITE",
      "eventType": "OTHER",
      "matchKeys": Array [
        Object {
          "type": "EMAIL",
          "values": Array [
            "79da0497818ef8ce6a78a70caf8e2777ed21e6cfa08bc4cb2afae4305011b240",
          ],
        },
      ],
      "name": "J0[p[5E(EUCnQ$e4IRX",
      "timestamp": "J0[p[5E(EUCnQ$e4IRX",
      "unitsSold": 7679529778675712,
      "value": 76795297786757.12,
    },
  ],
  "ingestionMethod": "SERVER_TO_SERVER",
}
`;

exports[`Testing snapshot for AmazonConversionsApi's trackConversion destination action: required fields 1`] = `
Object {
  "eventData": Array [
    Object {
      "consent": Object {},
      "countryCode": "J0[p[5E(EUCnQ$e4IRX",
      "eventActionSource": "WEBSITE",
      "eventType": "OTHER",
      "matchKeys": Array [
        Object {
          "type": "EMAIL",
          "values": Array [
            "79da0497818ef8ce6a78a70caf8e2777ed21e6cfa08bc4cb2afae4305011b240",
          ],
        },
      ],
      "name": "J0[p[5E(EUCnQ$e4IRX",
      "timestamp": "J0[p[5E(EUCnQ$e4IRX",
    },
  ],
  "ingestionMethod": "SERVER_TO_SERVER",
}
`;
